Day3 of week 6 class code

--- a/Week6/Day3/html_template.html
+++ b/Week6/Day3/html_template.html
@@ -3,9 +3,11 @@
     <head>
         <title>This is a web page template</title>
 
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        this is a test
+        <h1 id = "heading"></h1>The End is nay!</h1>
 
+    <script src="main.js"></script>    
     </body>
 </html>
